unpackaged/main/default/objects/Case_Detail__c/Case_Detail__c.object-meta.xml
<CustomObject>
    <label>Case Detail</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Case Detail Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>