unpackaged/main/default/objects/Case_Detail__c/recordTypes/Invoice_Status.recordType-meta.xml
<RecordType>
    <fullName>Invoice_Status</fullName>
    <active>true</active>
    <label>Invoice Status</label>
</RecordType>